# StructureTools

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  lista de atividades  pyproject.toml  setup.py  teste.json
freecad/StructureTools/: calc.py  diagram.py  init_gui.py  load.py  load_base_class.py  load_distributed.py  load_momentum.py  load_nodal.py  load_pontual.py  material.py  member.py  model.py  profile.py  section.py  suport.py  utils_func.py
freecad/StructureTools/Pynite_main/: Analysis.py  BeamSegY.py  FEModel3D.py  Member3D.py  Mesh.py  PhysMember.py  Plastic Beam.py  ShearWall.py  Spring3D.py  __init__.py
freecad/StructureTools/resources/code/base_cmd_class/: cmd_base_class.py
freecad/StructureTools/resources/code/loads/: __init__.py  distri_load_cmd.py  pontual_force_cmd.py  pontual_momentum_cmd.py
freecad/StructureTools/resources/code/loads/loads_code/: distri_load_code.py  load_base_class.py  pontual_force_code.py  pontual_momentum_code.py  view_provider_load.py
freecad/StructureTools/resources/code/utils/: constants.py  make_arrow.py  rotate.py  shape_appearance.py
freecad/StructureTools/resources/icons/: calc.xpm  diagram.xpm  load.xpm  load_distributed.xpm  load_momentum.xpm  load_nodal.xpm  material.xpm  member.xpm  moment.xpm  section.xpm  suport.xpm
freecad/StructureTools/resources/translations/: README.md  StructureTools_es-ES.ts  update_translation.sh
freecad/StructureTools/resources/ui/: teste de ui.ui
